...
                android:layout_marginLeft="@dimen/list_item_padding"
                android:layout_marginRight="@dimen/list_item_padding"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/tasks_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>
        </LinearLayout>

        <LinearLayout
...
