...

    <FrameLayout
        android:id="@+id/contentFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </FrameLayout>
    <!-- Navigation Drawer -->
    <com.google.android.material.navigation.NavigationView
...
